--- a/AI_impact_on_jobs.ipynb
+++ b/AI_impact_on_jobs.ipynb
@@ -937,7 +937,7 @@
         "plt.grid(True)\n",
         "plt.tight_layout()\n",
         "plt.show()\n",
-        "print(f\"A correlação entre reajuste anual do salário e uso de IA na função é igual a: {df[\"Intensidade_de_IA\"].corr(df[\"salary_change_vs_prev_year_percent\"]):.2f}\")"
+        "print(f\"A correlação entre reajuste anual do salário e uso de IA na função é igual a: {df[\'Intensidade_de_IA\'].corr(df[\'salary_change_vs_prev_year_percent\']):.2f}\")"
       ]
     },
     {
@@ -977,7 +977,7 @@
         "    }, inplace=True)\n",
         "sns.jointplot(data = df, x='Salário em Dólar anual', y='Risco de Automação');\n",
         "\n",
-        "print(f\"A correlação entre salário e risco de automação é igual a: {df[\"Salário em Dólar anual\"].corr(df[\"Risco de Automação\"]):.2f}\")"
+        "print(f\"A correlação entre salário e risco de automação é igual a: {df[\'Salário em Dólar anual\'].corr(df[\'Risco de Automação\']):.2f}\")"
       ]
     }
   ],
